<resources>
    <string name="app_name">Android internship tasks</string>
    <string name="home">Home</string>
    <string name="sectorLabel">Комунальне господарство</string>
    <string name="createdLabel">Створено</string>
    <string name="registeredLabel">Зареєстровано</string>
    <string name="solvedLabel">Вирішити до</string>
    <string name="responsibleLabel">Відповідальний</string>

    <string name="nav_item_header">e-contact</string>
    <string name="nav_item_all_appeals">Всі звернення</string>
    <string name="nav_item_appeals_on_map">Звернення на мапі</string>
    <string name="nav_item_authorization">Увійти в аккаунт</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_all_appeals</item>
        <item>@string/nav_item_appeals_on_map</item>
    </string-array>

    <string name="imageIssues">ic_issues.png</string>
    <string name="imageMap">ic_map.png</string>

    <string-array name="nav_drawer_images">
        <item>@string/imageIssues</item>
        <item>@string/imageMap</item>
    </string-array>

    <string name="tab_item_progress">В роботі</string>
    <string name="tab_item_done">Виконано</string>
    <string name="tab_item_notDone">Очікує</string>

    <string name="action_filter">Filter</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="days">днів</string>

    <string name="nav_footer_links">
        <a href="http://www.itruh.dp.ua/" target="_top">It Ruh Dnipro</a>
        та
        <a href="http://www.yalantis.com" target="_top">Yalantis</a>
    </string>
    <string name="nav_footer_text">Зроблено з любов\'ю</string>

</resources>
